Aviso se não possui carona ativa

--- a/Caronae/Base.lproj/Main.storyboard
+++ b/Caronae/Base.lproj/Main.storyboard
@@ -7195,8 +7195,8 @@ FOTO</string>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="jF8-dz-c1W"/>
-        <segue reference="iap-vV-xAI"/>
-        <segue reference="tug-g2-rGR"/>
+        <segue reference="GWy-OD-WPe"/>
+        <segue reference="VGz-uS-yQa"/>
         <segue reference="AOI-Sr-h8h"/>
         <segue reference="ugX-qh-OjL"/>
         <segue reference="7VR-Dw-svl"/>
